<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/screen_padding">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    <Button
        android:id="@+id/pick_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing"
        android:text="@string/pick_image" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing"
        android:scrollbars="none">

        <RadioGroup
            android:id="@+id/regions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/region_bottom"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/region_bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/region_bottom" />

            <RadioButton
                android:id="@+id/region_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/region_top" />

            <RadioButton
                android:id="@+id/region_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/region_left" />

            <RadioButton
                android:id="@+id/region_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/region_right" />

            <RadioButton
                android:id="@+id/region_whole"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/region_whole" />
        </RadioGroup>
    </HorizontalScrollView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/spacing"
        android:layout_weight="1">

        <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/empty_message" />

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/screen_padding"
            android:visibility="gone">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:importantForAccessibility="no"
                android:scaleType="fitCenter" />

            <TextView
                android:id="@+id/primary_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                tools:text="@string/primary_text" />

            <TextView
                android:id="@+id/secondary_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/secondary_text" />

            <TextView
                android:id="@+id/background_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/background_text" />
        </LinearLayout>
    </FrameLayout>
</LinearLayout>
